Improved naming.